--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -38,7 +38,7 @@
 		 data-toggle-style-target="event"
 		 id="<%= "cell-#{section_identifier}-#{dom_id event}" %>"
 		 style="order: <%= event_counter + 1 %>">
-	<div data-controller="ripple" class="relative overflow-hidden ripple ripple-white">
+	<div class="relative overflow-hidden ripple ripple-white">
 		<div class="bg-gray-50 rounded-t-lg aspect-ratio-16/9"></div>
 		<%= image_tag shrine_image_url(event, :feed), {
 				loading: :lazy,
