--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -22,8 +22,7 @@
 				 data-share-button-title="<%= event.name %>"
 				 data-share-button-url="<%= event_url(event, format: :html) %>">
 			<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-600 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-brand-500 w-content"
-					 data-action="click->share-button#share"
-					 data-controller="ripple">
+					 data-action="click->share-button#share">
 				<span>Compartilhar</span>
 				<svg class="w-4 h-4 ml-1 fill-current" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
 					<path d="M0 0h24v24H0z" fill="none"/>
