--- a/web/app/views/feeds/_horizontal_event.html.erb
+++ b/web/app/views/feeds/_horizontal_event.html.erb
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 	<div>
-		<div data-controller="ripple" class="relative w-32 mt-6 overflow-hidden rounded-lg ripple ripple-white">
+		<div class="relative w-32 mt-6 overflow-hidden rounded-lg ripple ripple-white">
 			<div class="bg-gray-50 aspect-ratio-16/9"></div>
 			<%= link_to event_path(event) do %>
 				<%= image_tag shrine_image_url(event, :feed), {
